--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -126,13 +126,13 @@
     position: absolute;
     top: 100%;
     left: 0;
-
-    background-color: #ffffbc;
-    min-width: 200px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    z-index: 1001;
+    background-color: #252525e7;
+    min-width: 300px;
+    box-shadow: 0 0 10px 8px rgba(0, 0, 0, 0.2);
+    z-index: 999;
     border-radius: 4px;
-    padding: 5px 0;
+    padding: 5px;
+    color: #fefe85;
 }
 
 .dropdown-section-title {
@@ -140,7 +140,6 @@
     font-weight: bold;
     padding: 8px 10px;
     border-top: 1px solid var(--color-neutral-accent);
-    color: var(--color-text-primary);
 }
 
 /* Exibição */
@@ -162,10 +161,11 @@
 
 /* Links do submenu */
 .dropdown-menu a {
-    color: var(--color-text-primary);
-    padding: 8px 15px;
+    padding: 4px;
     display: block;
     margin-left: 0;
+    margin: 5px;
+    border-radius: 5px;
 }
 
 .dropdown-menu a:hover {
