--- a/frontend/src/pages/AdminPage.css
+++ b/frontend/src/pages/AdminPage.css
@@ -23,9 +23,6 @@
 /* LAYOUT DA PÁGINA */
 /* ========================================================== */
 .admin-page-container {
-    /* padding: 50px;
-    margin: 40px auto; */
-
     font-family: Arial, sans-serif;
     color: #313b2f;
     background: #833ab4;
@@ -64,7 +61,7 @@
     /* Estilo BASE do CARD_STYLE original */
     padding: 20px;
     margin: 10px;
-    width: 200px;
+    width: 250px;
     height: 300px;
     border: 1px solid var(--color-text-primary);
     background-color: #3636363d;
@@ -112,7 +109,31 @@
     flex-grow: 1; /* Garante que todos os cards tenham a mesma altura */
 }
 
-@media (max-width: 480px) {
+@media (max-width: 780px) {
+    .admin-card {
+        padding: 10px;
+        margin: 10px;
+        width: 150px;
+        height: 180px;
+        border: 1px solid var(--color-text-primary);
+        background-color: #3636363d;
+        border-radius: 8px;
+        box-shadow: 0 0 20px #00000070;
+
+        /* Estilos de Display */
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+
+        /* Transições e Hover */
+        transition: transform 0.2s, box-shadow 0.2s;
+        cursor: pointer;
+        font-size: 11px;
+    }
+
     .admin-cards-grid {
         justify-content: center;
     }
