--- a/frontend/src/pages/ApliquesPage.css
+++ b/frontend/src/pages/ApliquesPage.css
@@ -25,6 +25,7 @@
 }
 .aplly-page-container {
     max-width: 100%;
+    min-height: 70vh;
     margin: 0 auto;
     padding: 20px 20px;
     padding-top: calc(
@@ -243,15 +244,13 @@
 
 @media (max-width: 768px) {
     .aplly-page-container {
-        width: 100%;
+        padding: 20px;
         margin: 0;
-        padding: 0px;
-        padding-top: 0;
-        padding-bottom: 0;
     }
 
-    .aplly-page-container h1 {
-        margin: 0 auto;
+    .aplly-page-container h1,
+    .aplly-page-container p {
+        margin: 10px auto;
         padding: 10px;
         padding-top: 0;
         padding-bottom: 0;
