--- a/frontend/src/pages/auth/LoginPage.css
+++ b/frontend/src/pages/auth/LoginPage.css
@@ -25,7 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 80vh;
     padding: 100px 0;
 }
 
@@ -169,4 +169,23 @@
 /* Ajuste opcional para garantir que o texto não fique escondido atrás do ícone */
 .password-input-container .form-input {
     padding-right: 40px; /* Espaço extra na direita para o ícone */
+}
+
+@media screen and (max-width: 480px) {
+    .login-container {
+        min-height: 94vh;
+        padding: 0 0px;
+    }
+
+    .login-card {
+        width: 100%;
+        max-width: 600px;
+        padding: 35px 20px;
+        border-radius: 0px;
+        background-color: transparent;
+        box-shadow: none;
+        border: none;
+        position: absolute;
+        top: 0;
+    }
 }
