--- a/frontend/src/pages/auth/RegisterPage.css
+++ b/frontend/src/pages/auth/RegisterPage.css
@@ -145,3 +145,22 @@
 .password-input-container .form-input {
     padding-right: 40px; /* Espaço extra na direita para o ícone */
 }
+
+@media screen and (max-width: 480px) {
+    .register-container {
+        min-height: 94vh;
+        padding: 0 0px;
+    }
+
+    .register-card {
+        width: 100%;
+        max-width: 600px;
+        padding: 0px 20px;
+        border-radius: 0px;
+        background-color: transparent;
+        box-shadow: none;
+        border: none;
+        position: absolute;
+        top: 0;
+    }
+}
