--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -64,7 +64,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: 0 -700px;
+    object-position: 0 -800px;
 }
 
 .hero-overlay {
@@ -79,7 +79,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.233);
+    background-color: rgba(0, 0, 0, 0.082);
     color: rgb(236, 236, 236);
     display: flex;
     flex-direction: column;
@@ -404,15 +404,20 @@ body {
     }
     .hero-image {
         object-position: center;
+        scale: 1.2;
     }
     .hero-text-overlay h2 {
         font-size: 1.8rem; /* Título menor */
+        position: absolute;
+        top: 20px;
     }
 
     .hero-text-overlay p {
         font-size: 1rem;
         padding: 0 10px;
         width: 100%;
+        position: absolute;
+        top: 120px;
     }
 
     /* Informações */
