--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -34,13 +34,12 @@
 }
 
 .header-content {
-    max-width: 92%;
+    max-width: 90%;
     margin: 0 auto;
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
 }
 
 /* LOGO E TÍTULO */
@@ -72,13 +71,13 @@
 
 /* NAVEGAÇÃO DESKTOP */
 .main-nav a,
-.main-nav button,
-.welcome-message {
+.main-nav button {
     margin-left: 15px;
     font-size: 0.8rem;
     text-decoration: none;
     color: #ffffbc;
     transition: color 0.2s;
+    text-transform: uppercase;
 }
 
 .main-nav a:hover {
@@ -113,12 +112,10 @@
 .nav-dropdown {
     position: relative;
     display: inline-block;
-    margin-left: 15px;
 }
 
 .dropdown-toggle {
     display: block;
-    padding-right: 10px;
 }
 
 .dropdown-menu {
