--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -69,7 +69,6 @@ body {
 
 .hero-overlay {
     position: absolute;
-    top: vh;
 }
 
 /* Estilo do Texto Sobreposto na Imagem */
@@ -79,26 +78,25 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.082);
-    color: rgb(236, 236, 236);
+    background-color: rgba(0, 0, 0, 0);
+    color: #ffffbc;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 20px;
 }
 
 .hero-text-overlay h2 {
     font-size: 2.5rem;
     margin-bottom: 15px;
-    text-shadow: 1px 10px 8px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.822);
 }
 
 .hero-text-overlay p {
     font-size: 1.2rem;
     max-width: 800px;
-    text-shadow: 1px 10px 8px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.938);
 }
 
 /* ========================================================== */
