--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -59,7 +59,29 @@ body {
     align-items: center;
     justify-content: center;
 }
-
+.scroll-down-arrow {
+    position: absolute;
+    bottom: 40px; /* Distância do rodapé da imagem */
+    left: 50%;
+    transform: translateX(-50%); /* Centraliza perfeitamente */
+    cursor: pointer;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: drop-shadow(
+        0px 2px 4px rgba(0, 0, 0, 0.5)
+    ); /* Sombra para destacar na foto */
+}
+.logo-home {
+    width: 120px;
+    height: auto;
+    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); */
+}
+/* Opcional: efeito ao passar o mouse */
+.scroll-down-arrow:hover {
+    opacity: 0.8;
+}
 .hero-image {
     width: 100%;
     height: 100%;
@@ -85,6 +107,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding-top: 200px;
 }
 
 .hero-text-overlay h2 {
@@ -403,6 +426,14 @@ body {
     .hero-image {
         object-position: center;
         scale: 1.2;
+    }
+    .logo-home {
+        position: absolute;
+        top: 500px;
+        /* left: 20px; */
+        width: 120px;
+        height: auto;
+        /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); */
     }
     .hero-text-overlay h2 {
         font-size: 1.8rem; /* Título menor */
