--- a/frontend/src/pages/AdminPage.css
+++ b/frontend/src/pages/AdminPage.css
@@ -109,6 +109,26 @@
     flex-grow: 1; /* Garante que todos os cards tenham a mesma altura */
 }
 
+.stats-cards-container .stat-card {
+    flex: 1;
+    padding: 20px;
+    border: 1px solid var(--color-text-primary);
+    background-color: #3636363d;
+    border-radius: 8px;
+    box-shadow: 0 0 20px #00000070;
+    text-align: center;
+}
+
+.card-grafic {
+    flex: 2;
+    padding: 20px;
+    border: 1px solid var(--color-text-primary);
+    background-color: #e4e4e43d;
+    border-radius: 8px;
+    box-shadow: 0 0 20px #00000070;
+    text-align: center;
+}
+
 @media (max-width: 780px) {
     .admin-card {
         padding: 10px;
