--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 :root {
+    width: 100%;
+    overflow-x: clip;
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
@@ -25,11 +27,12 @@ html,
 body {
     margin: 0;
     padding: 0;
-    min-height: 100dvh;
+    /* height: 100%;  <-- Removido */
+    min-height: 100vh; /* Use min-height em vez de height fixa */
     scroll-behavior: smooth;
     font-family: 'Inter', Arial, sans-serif;
     width: 100%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; <-- Removido daqui para evitar bugs do sticky */
     color: #474747;
 }
 h1,
