--- a/frontend/src/pages/AdminPage.css
+++ b/frontend/src/pages/AdminPage.css
@@ -127,6 +127,7 @@
     border-radius: 8px;
     box-shadow: 0 0 20px #00000070;
     text-align: center;
+    margin-bottom: 15px;
 }
 
 @media (max-width: 780px) {
